# fade

./: docker-compose.yml
api/: .env  .gitignore  Dockerfile  aerich.ini  pyproject.toml  requirements.txt
api/app/: main.py
api/src/: main.py
api/src/app/: routers.py
api/src/app/core/: services.py
api/src/app/user/: models.py  routers.py  schemas.py  services.py
api/src/config/: settings.py
